NAK-1089 added auto release support
